# Compromise.cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.bat  build.sh
include/: CMakeLists.txt  ComGame.h  ComGameTypes.h  CompromiseGame.cpp  CompromiseGame.h  CompromiseTypeDef.cpp  CompromiseTypeDef.h  Players.h
src/: CompromiseGame.cpp  CompromiseTypeDef.cpp  Players.cpp  main.cpp
src/ComGame/: CMakeLists.txt  ComGame.cpp  ComGame.h
src/ComGameTypes/: CMakeLists.txt  ComGameTypes.cpp  ComGameTypes.h
src/Players/: CMakeLists.txt  Players.cpp  Players.h
test/: test.cpp
